--- a/layout.html
+++ b/layout.html
@@ -23,7 +23,7 @@
     <h1>SpaceX Flights List</h1>
     <span>Fan content - Not an official site</span>
   </header>
-  <a href="https://github.com/spacexlaunches"><img class="github" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+  <a href="https://github.com/spacexlaunches/spacexlaunches.space"><img class="github" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
   <main>
     <div id="infos">
       <h2>// Next mission</h2>
@@ -66,7 +66,7 @@
     </div>
     <div id="flights"><div id="labels"><span style="height:141px">Destination</span><span style="height:520px">Rocket</span></div></div>
   </main>
-  <footer>Copyright 2016 © - <a href="/">spacexlaunches.space</a> - <a href="https://github.com/spacexlaunches/website/issues/new">Report Issue</a> - <a href="https://github.com/spacexlaunches/website">GitHub</a></footer>
+  <footer>Copyright 2016 © - <a href="/">spacexlaunches.space</a> - <a href="https://github.com/spacexlaunches/spacexlaunches.space/issues/new">Report Issue</a> - <a href="https://github.com/spacexlaunches/spacexlaunches.space">GitHub</a></footer>
 </body>
 <script src="script.js"></script>
 </html>
