Fix SpaceX logo

--- a/layout.html
+++ b/layout.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <header>
-    <img src="SpaceX.png">
+    <img src="/spacex.png" alt="SpaceX logo">
     <h1>SpaceX Flights List</h1>
     <span>Fan content - Not an official site</span>
   </header>
