--- a/layout.html
+++ b/layout.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="description" content="Every previous SpaceX launches and countdown for the next mission."/>
+  <link rel="shortcut icon" href="favicon.ico"> 
   <link rel="canonical" href="https://spacexlaunches.space/"/>
   <link rel="stylesheet" href="style.css">
   <title>SpaceX Launches</title>
