--- a/layout.html
+++ b/layout.html
@@ -5,7 +5,7 @@
   <meta name="description" content="Every previous SpaceX launches and countdown for the next mission."/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
   <link rel="shortcut icon" href="favicon.ico">
-  <link rel="canonical" href="https://spacexlaunches.space/"/>
+  <link rel="canonical" href="https://spacexlaunches.com/"/>
   <link rel="stylesheet" href="style.css">
   <title>SpaceX Launches</title>
   <script>
@@ -25,7 +25,7 @@
     <h1>SpaceX Flights List</h1>
     <span>Fan content - Not an official site</span>
   </header>
-  <a href="https://github.com/spacexlaunches/spacexlaunches.space"><img class="github" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+  <a href="https://github.com/spacexlaunches/spacexlaunches.com"><img class="github" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
   <main>
     <div id="infos">
       <h2>Next mission</h2>
@@ -66,7 +66,7 @@
     </div>
     <div id="flights"><div id="labels"><span style="height:141px">Destination</span><span style="height:520px">Rocket</span></div></div>
   </main>
-  <footer>Copyright 2016 © - <a href="/">spacexlaunches.space</a> - <a href="https://github.com/spacexlaunches/spacexlaunches.space/issues/new">Report Issue</a> - <a href="https://github.com/spacexlaunches/spacexlaunches.space">GitHub</a></footer>
+  <footer>Copyright 2016 © - <a href="/">spacexlaunches.com</a> - <a href="https://github.com/spacexlaunches/spacexlaunches.com/issues/new">Report Issue</a> - <a href="https://github.com/spacexlaunches/spacexlaunches.com">GitHub</a></footer>
 </body>
 <script src="script.js"></script>
 </html>
