--- a/layout.html
+++ b/layout.html
@@ -27,39 +27,7 @@
   </header>
   <a href="https://github.com/spacexlaunches/spacexlaunches.com"><img class="github" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
   <main>
-    <div id="infos">
-      <h2>Next mission</h2>
-      <div id="countdown" data-date="">
-        <div>
-          <div id="days">00</div>
-          <span>days</span>
-        </div>
-        <div>
-          <div id="hours">00</div>
-          <span>hours</span>
-        </div>
-        <div>
-          <div id="minutes">00</div>
-          <span>minutes</span>
-        </div>
-        <div>
-          <div id="seconds">00</div>
-          <span>seconds</span>
-        </div>
-      </div>
-      <div>
-        <div id="next-destination"></div>
-        <span>Destination</span>
-      </div>
-      <div>
-        <div id="next-rocket"></div>
-        <span>Rocket</span>
-      </div>
-      <div>
-        <div id="next-mission">CRS-9</div>
-        <span>Mission</span>
-      </div>
-    </div>
+    <div id="infos"><h2>Next mission</h2><p>No information for the next mission. You can <a href="https://github.com/spacexlaunches/spacexlaunches.com">contribute on GitHub</a>.</p></div>
     <div id="previous">
       <h2>Previous missions <span id="launches"></span></h2><span id="reverse" onclick="reverse()">reverse</span>
       <b>illustrated by <a href="https://zlsa.github.io/">ZLSA Design</a></b>
