--- a/layout.html
+++ b/layout.html
@@ -7,6 +7,7 @@
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="canonical" href="https://spacexlaunches.com/"/>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Space+Mono" rel="stylesheet">
   <title>SpaceX Launches</title>
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -34,10 +35,14 @@
         <button onclick="zoom(1)">+</button>
         <button onclick="zoom(-1)">-</button>
         <button onclick="reverse()">Reverse</button>
+        <button id="switchLayout">Show as table</button>
       </div>
       <b>illustrated by <a href="https://zlsa.github.io/">ZLSA Design</a></b>
     </div>
     <div id="flights"><div id="labels"><span>Destination | Rocket</span></div></div>
+    <table>
+    	<tbody id="flights-table" style="display: none"><tr><th rowspan="2">Date</th><th rowspan="2">Rocket</th><th rowspan="2">Mission name</th><th rowspan="2">Orbit</th><th colspan="2">Outcome</th></tr><tr><th>Mission</th><th>Landing</th></tr></tbody>
+    </table>
   </main>
   <footer>Copyright 2016 © - <a href="/">spacexlaunches.com</a> - <a href="https://github.com/spacexlaunches/spacexlaunches.com/issues/new">Report Issue</a> - <a href="https://github.com/spacexlaunches/spacexlaunches.com">GitHub</a></footer>
 </body>
