--- a/layout.html
+++ b/layout.html
@@ -28,7 +28,7 @@
   </header>
   <a href="https://github.com/spacexlaunches/spacexlaunches.com"><img class="github" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
   <main>
-    <div id="infos"><h2>Next mission</h2><p>No information for the next mission. You can <a href="https://github.com/spacexlaunches/spacexlaunches.com">contribute on GitHub</a>.</p></div>
+    <div id="next"><h2>Next mission</h2><p>No information for the next mission. You can <a href="https://github.com/spacexlaunches/spacexlaunches.com">contribute on GitHub</a>.</p></div>
     <div id="previous">
       <h2>Previous missions <span id="launches"></span></h2>
       <div id="buttons">
@@ -39,7 +39,10 @@
       </div>
       <b>illustrated by <a href="https://zlsa.github.io/">ZLSA Design</a></b>
     </div>
-    <div id="flights"><div id="labels"><span>Destination | Rocket</span></div></div>
+    <div id="flights-container">
+      <div id="flights"><div id="labels"><span>Destination | Rocket</span></div></div>
+      <div id="years"></div>
+    </div>
     <table>
     	<tbody id="flights-table" style="display: none"><tr><th rowspan="2">Date</th><th rowspan="2">Rocket</th><th rowspan="2">Mission name</th><th rowspan="2">Orbit</th><th colspan="2">Outcome</th></tr><tr><th>Mission</th><th>Landing</th></tr></tbody>
     </table>
