--- a/layout.html
+++ b/layout.html
@@ -43,8 +43,8 @@
       <div id="flights"><div id="labels"><span>Destination | Rocket</span></div></div>
       <div id="years"></div>
     </div>
-    <table>
-    	<tbody id="flights-table" style="display: none"><tr><th rowspan="2">Date</th><th rowspan="2">Rocket</th><th rowspan="2">Mission name</th><th rowspan="2">Orbit</th><th colspan="2">Outcome</th></tr><tr><th>Mission</th><th>Landing</th></tr></tbody>
+    <table id="flights-table" style="display: none">
+    	<tbody><tr><th rowspan="2">Date</th><th rowspan="2">Rocket</th><th rowspan="2">Mission name</th><th rowspan="2">Orbit</th><th colspan="2">Outcome</th></tr><tr><th>Mission</th><th>Landing</th></tr></tbody>
     </table>
   </main>
   <footer>Copyright 2016 © - <a href="/">spacexlaunches.com</a> - <a href="https://github.com/spacexlaunches/spacexlaunches.com/issues/new">Report Issue</a> - <a href="https://github.com/spacexlaunches/spacexlaunches.com">GitHub</a></footer>
