Add informations & links

--- a/layout.html
+++ b/layout.html
@@ -46,8 +46,24 @@
     <table id="flights-table" style="display: none">
     	<tbody><tr><th rowspan="2">Date</th><th rowspan="2">Rocket</th><th rowspan="2">Mission name</th><th rowspan="2">Orbit</th><th colspan="2">Outcome</th></tr><tr><th>Mission</th><th>Landing</th></tr></tbody>
     </table>
+    <div class="infos">
+      <div>
+        <h2>Links</h2>
+        <ul>
+          <li><a href="http://spacex.com/">Offical Website</a></li>
+          <li><a href="https://www.reddit.com/r/spacex">/r/SpaceX</a> - SpaceX discussion community</li>
+          <li><a href="https://spacexstats.com/">SpaceX Stats</a> – General news &amp; info</li>
+        </ul>
+      </div>
+      <div>
+        <h2>Informations</h2>
+        <p>
+          Hover on a rocket or a destination to get its name.
+          <br>You can contribute to launches data or the website on <a href="https://github.com/spacexlaunches/">GitHub</a>.<p>
+        </p>
+    </div>
   </main>
-  <footer>Copyright 2016 © - <a href="/">spacexlaunches.com</a> - <a href="https://github.com/spacexlaunches/spacexlaunches.com/issues/new">Report Issue</a> - <a href="https://github.com/spacexlaunches/spacexlaunches.com">GitHub</a></footer>
+  <footer>Copyright 2016 © - <a href="/">spacexlaunches.com</a> - <a href="https://github.com/spacexlaunches/spacexlaunches.com/issues/new">Report Website issue</a> - <a href="https://github.com/spacexlaunches/launches-data/issues/new">Report Data issue</a> - <a href="https://github.com/spacexlaunches/">GitHub</a></footer>
 </body>
 <script src="script.js"></script>
 </html>
