--- a/layout.html
+++ b/layout.html
@@ -28,7 +28,7 @@
   </header>
   <a href="https://github.com/spacexlaunches/spacexlaunches.com"><img class="github" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
   <main>
-    <div id="next"><h2>Next mission</h2><p>No information for the next mission. You can <a href="https://github.com/spacexlaunches/spacexlaunches.com">contribute on GitHub</a>.</p></div>
+    <div id="next"><h2>Next mission</h2><p>No information for the next mission. You can <a href="https://github.com/spacexlaunches/launches-data">contribute on GitHub</a>.</p></div>
     <div id="previous">
       <h2>Previous missions <span id="launches"></span></h2>
       <div id="buttons">
