--- a/layout.html
+++ b/layout.html
@@ -65,5 +65,9 @@
   </main>
   <footer>Copyright 2016 © - <a href="/">spacexlaunches.com</a> - <a href="https://github.com/spacexlaunches/spacexlaunches.com/issues/new">Report Website issue</a> - <a href="https://github.com/spacexlaunches/launches-data/issues/new">Report Data issue</a> - <a href="https://github.com/spacexlaunches/">GitHub</a></footer>
 </body>
+<script
+  src="https://code.jquery.com/jquery-3.1.1.min.js"
+  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  crossorigin="anonymous"></script>
 <script src="script.js"></script>
 </html>
