Add patch hover

--- a/layout.html
+++ b/layout.html
@@ -64,6 +64,7 @@
     </div>
   </main>
   <footer>Copyright 2016 © - <a href="/">spacexlaunches.com</a> - <a href="https://github.com/spacexlaunches/spacexlaunches.com/issues/new">Report Website issue</a> - <a href="https://github.com/spacexlaunches/launches-data/issues/new">Report Data issue</a> - <a href="https://github.com/spacexlaunches/">GitHub</a></footer>
+  <img id="patch-hover" with="250" height="250" src="" style="position: absolute; display: none;"/>
 </body>
 <script
   src="https://code.jquery.com/jquery-3.1.1.min.js"
