--- a/layout.html
+++ b/layout.html
@@ -59,7 +59,10 @@
         <h2>Informations</h2>
         <p>
           Hover on a rocket or a destination to get its name.
-          <br>You can contribute to launches data or the website on <a href="https://github.com/spacexlaunches/">GitHub</a>.<p>
+          <br>You can contribute to launches data or the website on <a href="https://github.com/spacexlaunches/">GitHub</a>.
+        </p>
+        <p>
+          Source: <a href="https://en.wikipedia.org/wiki/List_of_Falcon_9_and_Falcon_Heavy_launches">List of Falcon 9 and Falcon Heavy launches</a>
         </p>
     </div>
   </main>
