--- a/layout.html
+++ b/layout.html
@@ -21,7 +21,7 @@
 </head>
 <body>
   <header>
-    <img src="spacex.png" alt="SpaceX logo">
+    <img src="img/spacex.png" alt="SpaceX logo">
     <h1>SpaceX Flights List</h1>
     <span>Fan content - Not an official site</span>
   </header>
