Fix design small devices

--- a/layout.html
+++ b/layout.html
@@ -29,14 +29,14 @@
   <main>
     <div id="next"><h2>Next mission</h2><p>No information for the next mission. You can <a href="https://github.com/spacexlaunches/launches-data">contribute on GitHub</a>.</p></div>
     <div id="previous">
-      <h2>Previous missions <span id="launches"></span></h2>
+      <h2>Previous missions <span id="launches"></span><small>illustrated by <a href="https://zlsa.github.io/">ZLSA Design</a></small></h2>
+
       <div id="buttons">
         <button onclick="zoom(1)">+</button>
         <button onclick="zoom(-1)">-</button>
         <button onclick="reverse()">Reverse</button>
         <button id="switchLayout">Show as table</button>
       </div>
-      <b>illustrated by <a href="https://zlsa.github.io/">ZLSA Design</a></b>
     </div>
     <div id="flights-container">
       <div id="flights"><div id="labels"><span>Destination | Rocket</span></div></div>
@@ -47,7 +47,7 @@
     </table>
     <div class="infos">
       <div>
-        <h2>Links</h2>
+        <h3>Links</h3>
         <ul>
           <li><a href="http://spacex.com/">Offical Website</a></li>
           <li><a href="https://www.reddit.com/r/spacex">/r/SpaceX</a> - SpaceX discussion community</li>
@@ -55,7 +55,7 @@
         </ul>
       </div>
       <div>
-        <h2>Informations</h2>
+        <h3>Informations</h3>
         <p>
           Hover on a rocket or a destination to get its name.
           <br>You can contribute to launches data or the website on <a href="https://github.com/spacexlaunches/">GitHub</a>.
