Switch to SpaceX-API

--- a/layout.html
+++ b/layout.html
@@ -58,14 +58,13 @@
         <h3>Informations</h3>
         <p>
           Hover on a rocket or a destination to get its name.
-          <br>You can contribute to launches data or the website on <a href="https://github.com/spacexlaunches/">GitHub</a>.
         </p>
         <p>
-          Source: <a href="https://en.wikipedia.org/wiki/List_of_Falcon_9_and_Falcon_Heavy_launches">List of Falcon 9 and Falcon Heavy launches</a>
+          Source: <a href="https://github.com/r-spacex/SpaceX-API">SpaceX-API</a>
         </p>
     </div>
   </main>
-  <footer>Copyright 2016 © - <a href="/">spacexlaunches.com</a> - <a href="https://github.com/spacexlaunches/spacexlaunches.com/issues/new">Report Website issue</a> - <a href="https://github.com/spacexlaunches/launches-data/issues/new">Report Data issue</a> - <a href="https://github.com/spacexlaunches/">GitHub</a></footer>
+  <footer>Copyright 2017 © - <a href="/">spacexlaunches.com</a> - <a href="https://github.com/spacexlaunches/spacexlaunches.com/issues/new">Report issue</a> - <a href="https://github.com/spacexlaunches/">GitHub</a></footer>
   <img id="patch-hover" with="250" height="250" src="" style="position: absolute; display: none;"/>
 </body>
 <script
