Add meta description

--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,26 @@
     </script>
     <meta charset="utf-8" />
     <meta
+      name="description"
+      content="Countdown for next SpaceX launch and visualisation of past SpaceX rocket launch schedule. All previous Flacon 9, Falcon Heavy and Dragon launches, landing and mission patch."
+    />
+    <meta
+      property="og:title"
+      content="Countdown next launch | Previous rocket visualisation - SpaceXLaunches"
+    />
+    <meta property="og:site_name" content="SpaceXLaunches.com" />
+    <meta property="og:url" content="https://spacexlaunches.com" />
+    <meta
+      property="og:description"
+      content="🚀 Countdown for next SpaceX launch and visualisation of past SpaceX rocket launch schedule. All previous Flacon 9, Falcon Heavy and Dragon launches, landing and mission patch."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://spacexlaunches.com/img/thumb.png" />
+    <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <link rel="canonical" href="https://spacexlaunches.com/" />
     <link
       href="https://fonts.googleapis.com/css?family=Roboto+Mono:100|Exo+2:100,200,300,400,500,700,800,900"
       rel="stylesheet"
@@ -28,7 +45,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link rel="shortcut icon" href="/favicon.ico" />
-    <title>SpaceX Launches</title>
+    <title>Countdown next launch | Previous rocket visualisation - SpaceXLaunches</title>
   </head>
 
   <body>
