--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       content="🚀 Countdown for next SpaceX launch and visualisation of past SpaceX rocket launch schedule. All previous Flacon 9, Falcon Heavy and Dragon launches, landing and mission patch."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://spacexlaunches.com/img/thumb.png" />
+    <meta property="og:image" content="https://spacexlaunches.com/img/thumb2.png" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
