--- a/public/index.html
+++ b/public/index.html
@@ -15,13 +15,15 @@
       gtag('config', 'UA-77842893-1')
     </script>
     <meta charset="utf-8" />
+    <link href="https://images.weserv.nl" rel="preconnect" />
+    <link href="https://www.google-analytics.com" rel="preconnect" />
     <meta
       name="description"
       content="Countdown for next SpaceX launch and visualisation of past SpaceX rocket launch schedule. All previous Flacon 9, Falcon Heavy and Dragon launches, landing and mission patch."
     />
     <meta
       property="og:title"
-      content="Countdown next launch | Previous rocket visualisation - SpaceXLaunches"
+      content="Countdown next launch | Previous rocket visualisation - SpaceX Launches"
     />
     <meta property="og:site_name" content="SpaceXLaunches.com" />
     <meta property="og:url" content="https://spacexlaunches.com" />
@@ -41,7 +43,7 @@
       rel="stylesheet"
     />
     <link rel="shortcut icon" href="/favicon.ico" />
-    <title>Countdown next launch | Previous rocket visualisation - SpaceXLaunches</title>
+    <title>Countdown next launch | Previous rocket visualisation - SpaceX Launches</title>
   </head>
 
   <body>
